# JanusAI_V2

./: .codeguardrc.json  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  setup.py  setup_min_test_env.sh
.github/workflows/: ci.yml  multi-llm-pipeline.yml
benchmarks/: benchmark_ppo_agent.py
configs/: config.yaml  cpu_optimized.yaml  debug.yaml  demo_config.yaml  distributed.yaml  gpu_optimized.yaml  production.yaml  world_model_ppo.yaml
configs/network/: actor_network_config.yaml  critic_network_config.yaml
configs/ppo_agent/: actor_config_continuous.yaml  actor_config_efficient.yaml  actor_config_large.yaml  actor_config_recurrent.yaml  actor_config_robust.yaml  actor_config_small.yaml  critic_config_large.yaml  critic_config_recurrent.yaml  critic_config_small.yaml  experimental_config.yaml
docs/: Mod_PPO_implementation.md  Multi-Agent_PPO.md  World_Model_PPO.md  world_model_readme.md
experiments/configs/: README.md  poet_physics_discovery.yaml
janus/: __init__.py
janus/agents/: __init__.py  architect_agent.py  components.py  custom_components.py  environment_host.py  multi_agent_ppo.py  ppo_agent.py  ppo_trainer_updated.py  random_agent.py  world_model_agent.py
janus/cli/: main.py
janus/core/: __init__.py  base_agent.py  base_env.py  base_environment_spec.py  base_grammar.py  base_reward.py  knowledge_base.py  symbolic.py
janus/envs/: __init__.py  base.py  gridworld.py  symbolic_discovery_env.py  symbolic_regression.py
janus/grammars/: __init__.py  math_grammar.py  progressive_grammar.py
janus/rewards/: __init__.py  base.py  reward_handler.py
janus/utils/: logging.py  model_hook_manager.py
kubernetes/: deployment.yaml
scripts/: health_check.py  run_simple_e2e_test.py  setup_dev.sh  train_distributed.sh  train_world_model_ppo.py  world_model_demo.py
scripts/examples/: advanced_ppo_usage.py  demo_world_model.py  multi_agent_training_example.py  (+2 more)
test/: test_async_ppo.py  test_ppo_integration.py  test_rewards.py
tests/: test_buffer.py  test_ppo_agent.py  test_world_model.py
(+19 files in other folders)
