[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "janus-ai"
version = "2.0.0"
description = "A Python-based framework for symbolic knowledge discovery using multi-agent reinforcement learning."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.1",
    "protobuf>=4.25.0",
    "torch-geometric>=2.4.0",
]

# Use a separate table for authors for more robust parsing
[[project.authors]]
name = "JanusAI Team"
email = "contact@janusai.com"

[project.urls]
"Homepage" = "https://github.com/your-repo/JanusAI_V2"
"Bug Tracker" = "https://github.com/your-repo/JanusAI_V2/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "mypy>=1.7.0",
    "black>=23.11.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pre-commit>=3.5.0",
]
gpu = [
    "gputil>=1.4.0",
    "nvitop>=1.3.0",
]
full = [
    "wandb>=0.16.0",
    "gymnasium>=0.29.1",
    "matplotlib>=3.8.2",
    "tqdm>=4.66.1",
    "rich>=13.7.0",
]
profiling = [
    "line-profiler>=4.1.1",
    "memory-profiler>=0.61.0",
    "scalene>=1.5.31",
]

[tool.setuptools.packages.find]
where = ["janus"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88